# peraltaCobrancas

./: .dockerignore  .gitignore  CHANGELOG.md  Caddyfile  README.md  config.py  cz.json  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  pytest.ini  requirements.txt  squid.conf
back/: .dockerignore  .env.example  .gitignore  Dockerfile  config.py  django_interactive.ipynb  entrypoint.sh  pyproject.toml  requirements.txt
back/app/: apps.py  dtos.py  exceptions.py  models.py  schemas.py  sms_api.py  utils.py
back/app/api/: __init__.py  agreement_api.py  auth_api.py  boleto_api.py  creditor_api.py  installment_api.py  login_history_api.py  payer_api.py  spreadsheet_api.py  user_api.py
back/app/controllers/: __init__.py  agreement_controller.py  auth_controller.py  boleto_controller.py  creditor_controller.py  installment_controller.py  login_code_controller.py  login_history_controller.py  payer_controller.py  spreadsheet_controller.py  user_controller.py
back/app/migrations/: 0001_initial.py  0002_alter_payer_user_pastnumber.py  0002_apiconsumer.py  0003_logincode_used.py
back/app/repositories/: __init__.py  agreement_repository.py  api_consumer_repository.py  boleto_repository.py  creditor_repository.py  installment_repository.py  login_code_repository.py  login_history_repository.py  past_number_repository.py  payer_repository.py  user_repository.py
back/app/schemas/: __init__.py  (+9 more)
back/core/: api.py  asgi.py  auth.py  custom_request.py  settings.py  urls.py  wsgi.py
back/tests/: conftest.py  factories.py  pagination_test.py  utils.py
(+114 files in other folders)
