[project]
name = "peralta-cobrancas"
version = "0.1.0"
description = "Sistema de boletos da Peralta Cobranças"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3==1.39.6",
    "django==5.2",
    "django-cors-headers==4.7.0",
    "django-extensions==4.1",
    "django-ninja==1.4.1",
    "django-ninja-jwt==5.3.7",
    "django-storages==1.14.6",
    "factory-boy==3.3.3",
    "gunicorn==23.0.0",
    "ipykernel>=7.1.0",
    "pytest==8.3.5",
    "pytest-django==4.11.1",
    "requests==2.32.3",
    "unidecode==1.4.0",
]
